src/runtime-rs/vendor/nonzero_ext/tests/compile-fail_1.45/zero_u8.stderr
error[E0080]: evaluation of constant value failed
 --> $DIR/zero_u8.rs:8:25
  |
8 |     let _a: NonZeroU8 = nonzero!(0u8);
  |                         ^^^^^^^^^^^^^ attempt to subtract with overflow
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
